Rename basic_card -> status_card, add user_panel

--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -1,3 +1,4 @@
 @import './variables.scss';
 @import './home.scss';
-@import './basic_card.scss';
+@import './status_card.scss';
+@import './user_panel.scss';
