--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -1,4 +1,6 @@
 @import './variables.scss';
 @import './home.scss';
 @import './status_card.scss';
-@import './user_panel.scss';
+@import './panel.scss';
+@import './overview.scss';
+@import './progress.scss';
