--- a/src/stylesheets/variables.scss
+++ b/src/stylesheets/variables.scss
@@ -45,3 +45,9 @@ body {
 * {
   box-sizing: border-box;
 }
+
+.justify-between {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
