--- a/src/stylesheets/variables.scss
+++ b/src/stylesheets/variables.scss
@@ -70,6 +70,10 @@ body {
   box-sizing: border-box;
 }
 
+a {
+  text-decoration: none;
+}
+
 .justify-between {
   display: flex;
   justify-content: space-between;
