Add views folder, add router Home and Dashboard

--- a/src/stylesheets/home.scss
+++ b/src/stylesheets/home.scss
@@ -12,6 +12,7 @@
     height: 100%;
     position: fixed;
     top: 0;
+    text-align: left;
 
     .el-menu-vertical-demo:not(.el-menu--collapse) {
       width: 200px;
