--- a/src/stylesheets/variables.scss
+++ b/src/stylesheets/variables.scss
@@ -13,6 +13,7 @@ $gray-bg-color: #f3f3f3;
 $light-gray-bg-color: #f6f6f6;
 $darken-gray-bg-color: #eee;
 
+$sidebar-bg-color: #324157;
 $sidebar-width: 20rem;
 
 .primary {
