Modify header and panel, add activeIndex in Home

--- a/src/stylesheets/header.scss
+++ b/src/stylesheets/header.scss
@@ -2,6 +2,8 @@
   position: relative;
   height: 6rem;
   padding: 0 2rem;
+  box-shadow: $box-shadow;
+  z-index: 20;
 
   .left {
     font-size: 1.4rem;
