--- a/src/stylesheets/panel.scss
+++ b/src/stylesheets/panel.scss
@@ -8,7 +8,7 @@
     width: 100%;
     padding: 1.4rem;
     font-size: 2rem;
-    background-color: $white-color;
+    background-color: inherit;
     border-radius: 4px 4px 0 0;
     border-bottom: 2px solid $gray-bg-color;
   }
