--- a/src/stylesheets/home.scss
+++ b/src/stylesheets/home.scss
@@ -97,3 +97,13 @@
     }
   }
 }
+
+.table {
+  text-align: left;
+  padding: 2rem;
+  background-color: $white-color;
+
+  .toolbar {
+    height: 5rem;
+  }
+}
