Import vuex and login page

--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -1,4 +1,5 @@
 @import './variables.scss';
+@import './login.scss';
 @import './header.scss';
 @import './home.scss';
 @import './status_card.scss';
