--- a/src/stylesheets/variables.scss
+++ b/src/stylesheets/variables.scss
@@ -13,6 +13,7 @@ $helper-color: #bababa;
 $gray-bg-color: #f3f3f3;
 $light-gray-bg-color: #f6f6f6;
 $darken-gray-bg-color: #eee;
+$deep-primary-color: #2d3a4b;
 
 $sidebar-bg-color: #324157;
 $sidebar-width: 20rem;
